Fixed overflowing pictures on mobile display

--- a/src/components/ExperienceCard.css
+++ b/src/components/ExperienceCard.css
@@ -7,6 +7,8 @@
   /* box-shadow: 2px 2px 6px rgb(59, 59, 59); */
   padding-left: 20px;
   padding-right: 20px;
+  /* padding-top: 20px;
+  padding-bottom: 20px; */
   display: flex;
   flex-direction: row;
   transition: 0.3s;
@@ -61,9 +63,14 @@
   gap: 20px;
 }
 
+.experience-pic-mobile {
+  display: none;
+}
+
 @media screen and (max-width: 800px) {
   .experience-card {
     flex-direction: column;
+    padding-top: 20px;
   }
 
   .experience-desc {
@@ -72,8 +79,21 @@
   }
 
   .experience-pic-wrapper {
-    flex-direction: row;
-    justify-content: center;
+    /* flex-direction: row;
+    justify-content: center; */
+    /* width: 100%;
+    height: 100%;
+    object-fit: contain;
+    min-width: none;
+    min-height: none; */
+    display: none;
+  }
+
+  .experience-pic-mobile {
+    display: block;
+    width: 100%;
+    object-fit: cover;
+    height: auto;
   }
 
   .experience-card-buttons {
